# query_profiler_analysis

./: CLAUDE.md  EXPLAIN_ENABLED_BEHAVIOR_ANALYSIS.md  EXPLAIN_ENABLED_FIX_REPORT.md  EXPLAIN_ENABLED_Y_FIX_REPORT.md  EXPLAIN_ENABLED_Y_ORIGINAL_QUERY_CONDITIONS.md  EXPLAIN_EXECUTION_ERROR_ANALYSIS.md  FIXES_SUMMARY.md  OPTIMIZATION_ATTEMPTS_BUG_FIX.md  README.ja.md  README.md  REPARTITION_HINT_CONDITIONS_UPDATE.md  REPARTITION_HINT_TIMING_FIX.md  SHUFFLE_OPTIMIZATION_LLM_INTEGRATION.md  SHUFFLE_OPTIMIZATION_README.md  SQL_OPTIMIZATION_BUG_FIX.md  config.ipynb  current_query_profiler_analysis.py  enhanced_query_profiler_analysis.py  experiment.dbc  liquid_clustering_analysis_20250814_102217.json  liquid_clustering_analysis_20250814_102217.md  liquid_clustering_analysis_20250814_114548.md  liquid_clustering_analysis_20250814_120316.md  liquid_clustering_analysis_20250814_121052.md  liquid_clustering_analysis_20250815_092450.md  liquid_clustering_analysis_20250815_092456.json  liquid_clustering_analysis_20250815_092456.md  liquid_clustering_analysis_20250815_092500.md  liquid_clustering_analysis_20250816_145316.md  liquid_clustering_guidelines_20250813_160404.md  liquid_clustering_implementation_20250814_102217.sql  liquid_clustering_implementation_20250814_114548.sql  liquid_clustering_implementation_20250814_120316.sql  liquid_clustering_implementation_20250814_121052.sql  liquid_clustering_implementation_20250815_092450.sql  liquid_clustering_implementation_20250815_092456.sql  liquid_clustering_implementation_20250815_092500.sql  (+26 more)
notebooks/: __init__.py  main.py  (+1 more)
(+28 files in other folders)
